--- a/docs/content.yaml
+++ b/docs/content.yaml
@@ -201,6 +201,7 @@ Intermediate 1:
   - https://photos.google.com/photo/AF1QipMocNj3xsNFSCeZJwgUMJDjiIBc4z_wr7gKVQjv
 - Magic:
   - https://photos.google.com/photo/AF1QipNq5qGVcVEn9iSOfO91EfRI4keJnfOCd7-Vn3jT
+  - https://photos.google.com/photo/AF1QipNEIoBc2DRYGQkWKeB4sSO20aO_Aq9e1gCDFGLU
 # ======= INT 2 ==================================================================
 Intermediate 2:
 - Double Walk (alone):
@@ -319,6 +320,7 @@ Advanced 1:
 - Palma:
   - https://photos.google.com/photo/AF1QipOqJUZr_EgPtLAYCUFL1_RnWASo4tDEI_VRxCcf
   - https://photos.google.com/photo/AF1QipNQh0Cj4DA4FT_G6_YMBBtPwOCkYPD2UcTPGkg-
+  - https://photos.google.com/photo/AF1QipOX-eKSttueKu35duIeDSq4N61Pbj_BzviuL8wj
 - Inside Man:
   - https://photos.google.com/photo/AF1QipNTUujMaxdj7cwX-3YVOkdtJq3ACbZN0z-EuQoY
 - '': ['']
@@ -333,6 +335,7 @@ Advanced 1:
 - Suzy Turn:
   - https://photos.google.com/photo/AF1QipNMIIJu3P0DdIqJmoyflnzCCexOOcmGQcasSU7I
   - https://photos.google.com/photo/AF1QipNJZ7odncbYBpIa9L_7ZgUYklISLFv1jjvuAfBo
+  - https://photos.google.com/photo/AF1QipP3hvh4EmR8E-l3Xeluth7EzgkWRh0lIR63sJq8
 - Gancho + 360:
   - https://photos.google.com/photo/AF1QipN8SwVqoBxMHZ4OoOIW-jLCYee-dawf9b5Yik79
 - Footwork repetition:
@@ -358,7 +361,7 @@ Advanced 2:
 - Togoman v3: [https://photos.google.com/photo/AF1QipPH4mcoFps9mrHG2oke2fe3YrP0AaWjEIqjSVKm]
 - Ciego + Torremolinas: [https://photos.google.com/photo/AF1QipPbyU4Qcj2POQSLePlr4Q73CxXn_CkF3pfJ8puL]
 - Togoman Full: [https://photos.google.com/photo/AF1QipMsWQR8v8fbBPukxY_OP5yCaDcuE7YJKN-7u571]
-- Enshufla Turn: [https://photos.google.com/photo/AF1QipOIkVzX_PKWANJu3hqA9soPEHfSAtny-gphqPU4]
+- Enshufla Turn: [https://photos.google.com/photo/AF1QipOIkVzX_PKWANJu3hqA9soPEHfSAtny-gphqPU4, https://photos.google.com/photo/AF1QipMXWWXrJd2MJZ-4d7FDVXhU2CvY15E027xRaOH3]
 - Bojoman v1: [https://photos.google.com/photo/AF1QipPcu3VwtcXdhhYzC0DcdkmGTdT_a4SV1ZyG7Xd6]
 - El Blokado: [https://photos.google.com/photo/AF1QipNJJNo1EWmC2nDxw_7eJjuHLONjYPDmh4JDBjbI, https://photos.google.com/photo/AF1QipMmca-ToTwA1F9C5t5H40RJUYkm_zGAJbcm8AVM, https://photos.google.com/photo/AF1QipMNHEsDgXVZsqu77h5erTZwf0TSyCaOx8mZzM05]  
 # ======= ADV 3 ==================================================================
@@ -369,8 +372,7 @@ Advanced 3:
 - Alira v2: [https://photos.google.com/photo/AF1QipOyMiMFmTa_ED-KILwJTW3aY0a3tmKRuSLFM4Ty]
 - Suzy Lu v3: [https://photos.google.com/photo/AF1QipN2mLXIHq1X_R9TWbQeFU3Kp2s7OUXivD37Fg-G]
 - Easy Butterfly: [https://photos.google.com/photo/AF1QipMYpja7K3L5rusAIlUarY2SbCFcoBYtTDxbVTlX]
-- "" : [""]
-- Panchito: [https://photos.google.com/photo/AF1QipNNMkh8NQH5rHLB5T2AoIN68Kmm4tXZ4NMPC0Vb]
+- Panchito: [https://photos.google.com/photo/AF1QipNNMkh8NQH5rHLB5T2AoIN68Kmm4tXZ4NMPC0Vb, https://photos.google.com/photo/AF1QipNia7hHCe1pvJM3CptGqQ7jqr2re2xSnIuuRSLJ]
 # ======= ADV 4 ==================================================================
 Advanced 4: []
 # ======= MST 1 ==================================================================
@@ -425,6 +427,11 @@ Other Classes:
  
 # ==== WORKSHOPS ==============================================================
 Workshops:
+- <b>BSC 2023</b>: [''] # ---------------------------------------------------
+- "PW BSC" : [https://photos.google.com/photo/AF1QipNa2Dt-H6pV_of34q10po9PhQSFkOoK8wDk55ck]
+- "PW BSC w/Music" : [https://photos.google.com/photo/AF1QipNoREmahCTF7hyS7Pn6P7zCDW-vWwglL3TcbCiq]
+- "FW BSC" : [https://photos.google.com/photo/AF1QipPHPrlt9ucxOiDTeB4IlyMj6XDJW8nFSu8MDYtt]
+- "FW BSC w/Music" : [https://photos.google.com/photo/AF1QipPiUW47Oy6X8cnk2OgXjrCPsrrYnRqKW5wMLfKR]
 - <b>PARIS 2023</b>: [''] # ---------------------------------------------------
 - '': ['']
 - Musicaliy (Terri & Cecile):
