--- a/docs/content.yaml
+++ b/docs/content.yaml
@@ -366,15 +366,22 @@ Advanced 2:
 - El Blokado: [https://photos.google.com/photo/AF1QipNJJNo1EWmC2nDxw_7eJjuHLONjYPDmh4JDBjbI, https://photos.google.com/photo/AF1QipMmca-ToTwA1F9C5t5H40RJUYkm_zGAJbcm8AVM, https://photos.google.com/photo/AF1QipMNHEsDgXVZsqu77h5erTZwf0TSyCaOx8mZzM05]  
 # ======= ADV 3 ==================================================================
 Advanced 3:
-- Suzy Lu: [https://photos.google.com/photo/AF1QipPlrZuZ9NHEPr8Qi_ZZedethsW0cW_OXy2BI-NH]
-- Alira: [https://photos.google.com/photo/AF1QipNr0YPuN45O1fvExNhfX09PYKAX_Uok_p3DMwHd]
+- Suzy Lu: [https://photos.google.com/photo/AF1QipPlrZuZ9NHEPr8Qi_ZZedethsW0cW_OXy2BI-NH, https://photos.google.com/photo/AF1QipNfwxf1wIiX3SpSnKYNKH2PtcOfBvnH7dwvfoCa]
+- Alira: [https://photos.google.com/photo/AF1QipNr0YPuN45O1fvExNhfX09PYKAX_Uok_p3DMwHd, https://photos.google.com/photo/AF1QipOmBHvOC6TgQNrf4UUeaDR5XlIzMSVCI1bcaD7Z]
 - Suzy Lu v2: [https://photos.google.com/photo/AF1QipNt71Bv1pZjxxgBakyNjDfwofeE__WJW8JBwQmy]
 - Alira v2: [https://photos.google.com/photo/AF1QipOyMiMFmTa_ED-KILwJTW3aY0a3tmKRuSLFM4Ty]
 - Suzy Lu v3: [https://photos.google.com/photo/AF1QipN2mLXIHq1X_R9TWbQeFU3Kp2s7OUXivD37Fg-G]
 - Easy Butterfly: [https://photos.google.com/photo/AF1QipMYpja7K3L5rusAIlUarY2SbCFcoBYtTDxbVTlX]
+- Suzy Lu v3: [https://photos.google.com/photo/AF1QipN2mLXIHq1X_R9TWbQeFU3Kp2s7OUXivD37Fg-G]
 - Panchito: [https://photos.google.com/photo/AF1QipNNMkh8NQH5rHLB5T2AoIN68Kmm4tXZ4NMPC0Vb, https://photos.google.com/photo/AF1QipNia7hHCe1pvJM3CptGqQ7jqr2re2xSnIuuRSLJ]
 # ======= ADV 4 ==================================================================
-Advanced 4: []
+Advanced 4:
+- Cuncun: []
+- Advanced Double Walk: [https://photos.google.com/photo/AF1QipMCg8ipuabdBD4w-GnjAg2CZnagvsEApmj9NKUh]
+- Cuncun: []
+- Inside Turn walk by: [https://photos.google.com/photo/AF1QipN3oQoqe8Zz7kA6mKC6EtOi_229O-5Jgs08Rqmi]
+- Cuncun : [https://photos.google.com/photo/AF1QipMVJB6batcn1qojU8p0JfXoiWEiQhvGHAEQyVEX]
+- Sedenta Double Turn: [https://photos.google.com/photo/AF1QipNATMyQHKFvw_4TwM3MjIUsequvI2nWyOi3kiVk]
 # ======= MST 1 ==================================================================
 Master 1: []
 # ======= MST 2 ==================================================================
@@ -385,6 +392,7 @@ Master 3: []
 Master 4: []
 # ======= On-2 Club ==============================================================
 On-2 Club:
+- "2023-09-21 Back-2-Back" : [https://photos.google.com/photo/AF1QipNQMo9CrAfhp00E4VySDvpst8UNLAiCv-cONOuZ]
 - "2023-06-29": ['']
 - "3-1-2 Turn Extended" : [https://photos.google.com/photo/AF1QipP6DOJL1TbRXIFsthgKC0K61LueKHTZvhveAa5W]
 - "2023-06-08": ['']
